[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Actors/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Assets/Actors/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/Actors/Player/Particles/SmokeParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sounds/Hit.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.08502

[sub_resource type="CircleShape2D" id=2]
radius = 5.31712

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 2 )

[node name="SmokeParticles" parent="." instance=ExtResource( 3 )]
position = Vector2( -2.5, 0 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HitArea" type="Area2D" parent="." groups=[
"Player",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource( 2 )

[node name="Timers" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="Timers"]
wait_time = 0.4

[node name="Positions" type="Node2D" parent="."]

[node name="BulletPos" type="Position2D" parent="Positions"]
position = Vector2( 14, 0 )

[node name="Hiteffect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="HitArea" to="." method="_on_HitArea_area_entered"]
[connection signal="body_entered" from="HitArea" to="." method="_on_HitArea_body_entered"]
[connection signal="timeout" from="Timers/ShootTimer" to="." method="_on_ShootTimer_timeout"]
